<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loading"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/satnding_guy"
        android:visibility="visible"
        android:id="@+id/login_layout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="300sp"
            android:layout_marginRight="30sp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/team_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="30sp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/team"
            android:inputType="textPersonName"
            android:textSize="26sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:onClick="OnLogin"
            android:layout_marginRight="30sp"
            android:background="@color/submit_login"
            android:text="@string/button_submit" />
    </LinearLayout>

</LinearLayout>